--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-10  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in (STARTUP_NOTIFICATION_PACKAGE):
+	Remove mk for ALL_LINGUAS since it broke the build.
+
 2004-12-17  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-factory.c: (load_icon_file):
