--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-11  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in (STARTUP_NOTIFICATION_PACKAGE):
+	Add back mk.
+
 2005-01-10  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in (STARTUP_NOTIFICATION_PACKAGE):
