Update for release.
2005-01-11  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release.

	* configure.in:
	Require eel 2.92.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-01-11  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS:
+	Update for release.
+
+	* configure.in:
+	Require eel 2.92.
+
+2005-01-11  Alexander Larsson  <alexl@redhat.com>
+
 	* configure.in (STARTUP_NOTIFICATION_PACKAGE):
 	Add back mk.
 
