--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,14 @@
-This is nautilus 2.9.1, the file manager for the Gnome 2 desktop.
+This is nautilus 2.9.2, the file manager for the Gnome 2 desktop.
+
+Major changes in 2.9.2 are:
+* Use the new mime API
+* Fixed bug in finding empty spots on the desktop
+* Handle drags to special desktop icons (trash...)
+* Fix crash in clipboard code
+* Fix crash with non-unique volume filenames
+* Better handling of sizes for image-file-as-icon
+* Fill in ctrl-l dialog correctly for desktop
+* Fix crash in bookmark dialog if parent window goes away
 
 Major changes since 2.8.2 are:
 * Bonobo not used for nautilus views
