--- a/po/mk.po
+++ b/po/mk.po
@@ -32,13 +32,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-09 12:27+0100\n"
+"POT-Creation-Date: 2005-01-11 09:55+0100\n"
 "PO-Revision-Date: 2005-01-11 01:11+0100\n"
 "Last-Translator:  <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: data/applications.desktop.in.h:1
 msgid "Applications"
@@ -752,8 +752,11 @@ msgid ""
 "\", \"owner\", \"group\", \"permissions\", \"octal_permissions\" and "
 "\"mime_type\"."
 msgstr ""
-"Листа на наслови под икона во икона прегледот и работната површина. Бројот на покажаните наслови зависи од степенот на зумирање. Можни вредности  се: \"големина\", \"тип\", \"датум на модификација\", \"датум на промена\", \"датум "
-"на отварање\", \"сопственик\", \"група\", \"овластувања\", октални_овластувања и \"mime_type\""
+"Листа на наслови под икона во икона прегледот и работната површина. Бројот "
+"на покажаните наслови зависи од степенот на зумирање. Можни вредности  се: "
+"\"големина\", \"тип\", \"датум на модификација\", \"датум на промена\", "
+"\"датум на отварање\", \"сопственик\", \"група\", \"овластувања\", "
+"октални_овластувања и \"mime_type\""
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:2
 msgid "Bring up a new window for every opened file"
@@ -976,7 +979,8 @@ msgstr ""
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:43
 msgid "If set to true, then Nautilus will draw the icons on the desktop."
-msgstr "Ако е вклучено,тогаш Наутилус ќе ги црта иконите на работната површина."
+msgstr ""
+"Ако е вклучено,тогаш Наутилус ќе ги црта иконите на работната површина."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:44
 msgid ""
@@ -993,8 +997,9 @@ msgid ""
 "If set to true, then Nautilus will use the user's home folder as the "
 "desktop. If it is false, then it will use ~/Desktop as the desktop."
 msgstr ""
-"Ако е вклучено, тогаш Наутилус ќе го користи домашниот директориум "
-"на корисникот како работна површина. Ако исклучено, тогаш ќе го користи ~/Desktop како работна површина."
+"Ако е вклучено, тогаш Наутилус ќе го користи домашниот директориум на "
+"корисникот како работна површина. Ако исклучено, тогаш ќе го користи ~/"
+"Desktop како работна површина."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:46
 msgid ""
@@ -1030,29 +1035,32 @@ msgid ""
 "If this is set to true, an icon linking to the computer location will be put "
 "on the desktop."
 msgstr ""
-"Ако ова е вклучено,тогаш на работната околина ќе биде ставена икона со врска до локацијата на Компјутер."
+"Ако ова е вклучено,тогаш на работната околина ќе биде ставена икона со врска "
+"до локацијата на Компјутер."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:50
 msgid ""
 "If this is set to true, an icon linking to the home folder will be put on "
 "the desktop."
 msgstr ""
-"Ако ова е подесено на вклучено, тогаш на работната околина ќе биде ставена икона со врска "
-"до домашниот директориум."
+"Ако ова е подесено на вклучено, тогаш на работната околина ќе биде ставена "
+"икона со врска до домашниот директориум."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:51
 msgid ""
 "If this is set to true, an icon linking to the trash will be put on the "
 "desktop."
 msgstr ""
-"Ако ова е вклучено, тогаш на работната околина ќе биде ставена икона со врска на директориумот Ѓубре."
+"Ако ова е вклучено, тогаш на работната околина ќе биде ставена икона со "
+"врска на директориумот Ѓубре."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:52
 msgid ""
 "If this is set to true, icons linking to mounted volumes will be put on the "
 "desktop."
 msgstr ""
-"Ако е вкличено, тогаш на работната површина ќе биде ставена икона со врска до монтираните партиции."
+"Ако е вкличено, тогаш на работната површина ќе биде ставена икона со врска "
+"до монтираните партиции."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:53
 msgid ""
@@ -1283,15 +1291,16 @@ msgid ""
 "This name can be set if you want a custom name for the home icon on the "
 "desktop."
 msgstr ""
-"Ова име може да се зададе доколку сакате да зададете свое име за иконата "
-"за домашен директориум на работната површина."
+"Ова име може да се зададе доколку сакате да зададете свое име за иконата за "
+"домашен директориум на работната површина."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:88
 msgid ""
 "This name can be set if you want a custom name for the trash icon on the "
 "desktop."
 msgstr ""
-"Ова име може да се зададе доколку сакате да зададете име за врската за ѓубре на работната површина."
+"Ова име може да се зададе доколку сакате да зададете име за врската за ѓубре "
+"на работната површина."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:89
 msgid "Trash icon visible on desktop"
@@ -2456,19 +2465,25 @@ msgstr "%m/%d/%y"
 
 #: libnautilus-private/nautilus-file.c:4312
 #: src/file-manager/fm-directory-view.c:1858
-#, c-format
+#, fuzzy, c-format
 msgid "%u item"
-msgstr "%u предмет"
+msgid_plural "%u items"
+msgstr[0] "%u предмет"
+msgstr[1] "%u предмет"
 
 #: libnautilus-private/nautilus-file.c:4313
-#, c-format
+#, fuzzy, c-format
 msgid "%u folder"
-msgstr "%u папка"
+msgid_plural "%u folders"
+msgstr[0] "%u папка"
+msgstr[1] "%u папка"
 
 #: libnautilus-private/nautilus-file.c:4314
-#, c-format
+#, fuzzy, c-format
 msgid "%u file"
-msgstr "%u датотека"
+msgid_plural "%u files"
+msgstr[0] "%u датотека"
+msgstr[1] "%u датотека"
 
 #. This means no contents at all were readable
 #: libnautilus-private/nautilus-file.c:4639
@@ -3304,18 +3319,22 @@ msgid "_Desktop"
 msgstr "_Работна површина"
 
 #: src/file-manager/fm-directory-view.c:509
-#, c-format
+#, fuzzy, c-format
 msgid "Open %d Window?"
-msgstr "Отвори %d прозорец?"
+msgid_plural "Open %d Windows?"
+msgstr[0] "Отвори %d прозорец?"
+msgstr[1] "Отвори %d прозорец?"
 
 #: src/file-manager/fm-directory-view.c:510
 msgid "Are you sure you want to open all files?"
 msgstr "Сакате да ги отворите сите датотеки?"
 
 #: src/file-manager/fm-directory-view.c:511 src/nautilus-location-bar.c:158
-#, c-format
+#, fuzzy, c-format
 msgid "This will open %d separate window."
-msgstr "Ова ќе отвори %d посебен прозорец."
+msgid_plural "This will open %d separate windows."
+msgstr[0] "Ова ќе отвори %d посебен прозорец."
+msgstr[1] "Ова ќе отвори %d посебен прозорец."
 
 #: src/file-manager/fm-directory-view.c:812
 #, c-format
@@ -3323,11 +3342,12 @@ msgid "Are you sure you want to permanently delete \"%s\"?"
 msgstr "Дали си сигурен дека сакаш перманентно да го избришеш \"%s\"?"
 
 #: src/file-manager/fm-directory-view.c:816
-#, c-format
+#, fuzzy, c-format
 msgid "Are you sure you want to permanently delete the %d selected item?"
+msgid_plural ""
 "Are you sure you want to permanently delete the %d selected items?"
-msgstr "Дали сте сигурни дека сакате трајно да избришете %d избран предмет?"
-"Дали сте сигурни дека сакате трајно да избришете %d избрани предмети?"
+msgstr[0] "Дали си сигурен дека сакаш перманентно да го избришеш \"%s\"?"
+msgstr[1] "Дали си сигурен дека сакаш перманентно да го избришеш \"%s\"?"
 
 #: src/file-manager/fm-directory-view.c:824
 msgid "If you delete an item, it is permanently lost."
@@ -3351,20 +3371,26 @@ msgid "\"%s\" selected"
 msgstr "\"%s\" е означен"
 
 #: src/file-manager/fm-directory-view.c:1792
-#, c-format
+#, fuzzy, c-format
 msgid "%d folder selected"
-msgstr "%d означена папка"
+msgid_plural "%d folders selected"
+msgstr[0] "%d означена папка"
+msgstr[1] "%d означена папка"
 
 #: src/file-manager/fm-directory-view.c:1802
-#, c-format
+#, fuzzy, c-format
 msgid " (containing %d item)"
-msgstr " (содржи %d предмет)"
+msgid_plural " (containing %d items)"
+msgstr[0] " (содржи %d предмет)"
+msgstr[1] " (содржи %d предмет)"
 
 #. translators: this is preceded with a string of form 'N folders' (N more than 1)
 #: src/file-manager/fm-directory-view.c:1813
-#, c-format
+#, fuzzy, c-format
 msgid " (containing a total of %d item)"
-msgstr " (содржи вкупно %d предмет)"
+msgid_plural " (containing a total of %d items)"
+msgstr[0] " (содржи вкупно %d предмет)"
+msgstr[1] " (содржи вкупно %d предмет)"
 
 #: src/file-manager/fm-directory-view.c:1829
 #, c-format
@@ -3372,15 +3398,19 @@ msgid "\"%s\" selected (%s)"
 msgstr "\"%s\" избрани (%s)"
 
 #: src/file-manager/fm-directory-view.c:1833
-#, c-format
+#, fuzzy, c-format
 msgid "%d item selected (%s)"
-msgstr "%d предмет е означен (%s)"
+msgid_plural "%d items selected (%s)"
+msgstr[0] "%d предмет е означен (%s)"
+msgstr[1] "%d предмет е означен (%s)"
 
 #. Folders selected also, use "other" terminology
 #: src/file-manager/fm-directory-view.c:1841
-#, c-format
+#, fuzzy, c-format
 msgid "%d other item selected (%s)"
-msgstr "%d останат предмет е означен (%s)"
+msgid_plural "%d other items selected (%s)"
+msgstr[0] "%d останат предмет е означен (%s)"
+msgstr[1] "%d останат предмет е означен (%s)"
 
 #: src/file-manager/fm-directory-view.c:1862
 #, c-format
@@ -3450,14 +3480,15 @@ msgid "Are you sure you want to permanently delete \"%s\" from the trash?"
 msgstr "Дали сакате трајно да ја отстранитe \"%s\" од ѓубрето?"
 
 #: src/file-manager/fm-directory-view.c:3174
-#, c-format
+#, fuzzy, c-format
 msgid ""
 "Are you sure you want to permanently delete the %d selected item from the "
 "trash?"
+msgid_plural ""
 "Are you sure you want to permanently delete the %d selected items from the "
 "trash?"
-msgstr "Дали сте сигурни дека сакате трајно да отстраните %d избран предмет од ѓубрето?"
-"Дали сте сигурни дека сакате трајно да отстраните %d избрани предмети од ѓубрето?"
+msgstr[0] "Дали сакате трајно да ја отстранитe \"%s\" од ѓубрето?"
+msgstr[1] "Дали сакате трајно да ја отстранитe \"%s\" од ѓубрето?"
 
 #: src/file-manager/fm-directory-view.c:3183
 msgid "If you delete an item, it will be permanently lost."
@@ -3610,22 +3641,26 @@ msgid "\"%s\" will be copied if you select the Paste Files command"
 msgstr "\"%s\" ќе биде ископиран ако ја изберете командата „Вметни датотека“"
 
 #: src/file-manager/fm-directory-view.c:5213
-#, c-format
+#, fuzzy, c-format
 msgid ""
 "The %d selected item will be moved if you select the Paste Files command"
+msgid_plural ""
 "The %d selected items will be moved if you select the Paste Files command"
-msgstr ""
-"%d избран предмет ќе биде преместен доколку ја изберете командата „Вметни датотеки“"
-"%d избрани предмети ќе бидат преместени доколку ја изберете командата „Вметни датотеки“"
+msgstr[0] ""
+"\"%s\" ќе биде преместен ако ја изберете командата „Вменти датотека“"
+msgstr[1] ""
+"\"%s\" ќе биде преместен ако ја изберете командата „Вменти датотека“"
 
 #: src/file-manager/fm-directory-view.c:5220
-#, c-format
+#, fuzzy, c-format
 msgid ""
 "The %d selected item will be copied if you select the Paste Files command"
+msgid_plural ""
 "The %d selected items will be copied if you select the Paste Files command"
-msgstr ""
-" %d избран предмет ќе биде ископиран доколку ја изберете командата Вметни датотека"
-" %d избрани предмети ќе бидат ископирани доколку ја изберете командата Вметни датотеки"
+msgstr[0] ""
+"\"%s\" ќе биде ископиран ако ја изберете командата „Вметни датотека“"
+msgstr[1] ""
+"\"%s\" ќе биде ископиран ако ја изберете командата „Вметни датотека“"
 
 #: src/file-manager/fm-directory-view.c:5301
 #: src/file-manager/fm-tree-view.c:975
@@ -3804,7 +3839,8 @@ msgstr "_Вметни"
 msgid ""
 "Move or copy files previously selected by a Cut Files or Copy Files command"
 msgstr ""
-"Исечи или копирај датотеки претходно избрани со командата „Исечи датотеки“ или „Копирај датотеки“"
+"Исечи или копирај датотеки претходно избрани со командата „Исечи датотеки“ "
+"или „Копирај датотеки“"
 
 #. We make accelerator "" instead of null here to not inherit the stock
 #. accelerator for paste
@@ -3819,7 +3855,8 @@ msgid ""
 "Move or copy files previously selected by a Cut Files or Copy Files command "
 "into the selected folder"
 msgstr ""
-"Помести или копирај претходно избрани датотеки со командата „Исечи датотеки“ или „Копирај датотеки“"
+"Помести или копирај претходно избрани датотеки со командата „Исечи датотеки“ "
+"или „Копирај датотеки“"
 
 #. name, stock id
 #: src/file-manager/fm-directory-view.c:5764
@@ -3981,9 +4018,11 @@ msgstr "_Отвори со \"%s\""
 #: src/file-manager/fm-directory-view.c:6196
 #: src/file-manager/fm-directory-view.c:6198
 #: src/file-manager/fm-tree-view.c:1110
-#, c-format
+#, fuzzy, c-format
 msgid "Open in New Window"
-msgstr "Отвори во нов прозорец"
+msgid_plural "Open in %d New Windows"
+msgstr[0] "Отвори во нов прозорец"
+msgstr[1] "Отвори во нов прозорец"
 
 #: src/file-manager/fm-directory-view.c:6205
 msgid "Browse Folder"
@@ -4475,9 +4514,11 @@ msgid "unreadable"
 msgstr "нечитливо"
 
 #: src/file-manager/fm-properties-window.c:1820
-#, c-format
+#, fuzzy, c-format
 msgid "%d item, with size %s"
-msgstr "%d предмет, со големина од %s"
+msgid_plural "%d items, totalling %s"
+msgstr[0] "%d предмет, со големина од %s"
+msgstr[1] "%d предмет, со големина од %s"
 
 #: src/file-manager/fm-properties-window.c:1829
 msgid "(some contents unreadable)"
@@ -5434,13 +5475,19 @@ msgid "ISO Speed Rating"
 msgstr ""
 
 #: src/nautilus-image-properties-page.c:242
-#, c-format
+#, fuzzy, c-format
 msgid ""
 "<b>Image Type:</b> %s (%s)\n"
 "<b>Resolution:</b> %dx%d pixels\n"
+msgid_plural ""
 "<b>Image Type:</b> %s (%s)\n"
 "<b>Resolution:</b> %dx%d pixels\n"
-msgstr ""
+msgstr[0] ""
+"<b>Тип на слика:</b> %s (%s)\n"
+"<b>Резолуција:</b> %dx%d пиксели\n"
+"<b>Тип на слика:</b> %s (%s)\n"
+"<b>Резолуција:</b> %dx%d пиксели\n"
+msgstr[1] ""
 "<b>Тип на слика:</b> %s (%s)\n"
 "<b>Резолуција:</b> %dx%d пиксели\n"
 "<b>Тип на слика:</b> %s (%s)\n"
@@ -5498,9 +5545,11 @@ msgid "Go To:"
 msgstr "Оди До:"
 
 #: src/nautilus-location-bar.c:154
-#, c-format
+#, fuzzy, c-format
 msgid "Do you want to view %d location?"
-msgstr "Дали сакате да ја видите локацијата %d?"
+msgid_plural "Do you want to view %d locations?"
+msgstr[0] "Дали сакате да ја видите локацијата %d?"
+msgstr[1] "Дали сакате да ја видите локацијата %d?"
 
 #: src/nautilus-location-bar.c:170
 msgid "View in Multiple Windows?"
@@ -6323,6 +6372,40 @@ msgstr "Мрежни сервери"
 msgid "View your network servers in the Nautilus file manager"
 msgstr "Гледај ги твоите мрежни сервери во Наутилус - менаџерот за датотеки"
 
+#~ msgid ""
+#~ "Are you sure you want to permanently delete the %d selected item?Are you "
+#~ "sure you want to permanently delete the %d selected items?"
+#~ msgstr ""
+#~ "Дали сте сигурни дека сакате трајно да избришете %d избран предмет?Дали "
+#~ "сте сигурни дека сакате трајно да избришете %d избрани предмети?"
+
+#~ msgid ""
+#~ "Are you sure you want to permanently delete the %d selected item from the "
+#~ "trash?Are you sure you want to permanently delete the %d selected items "
+#~ "from the trash?"
+#~ msgstr ""
+#~ "Дали сте сигурни дека сакате трајно да отстраните %d избран предмет од "
+#~ "ѓубрето?Дали сте сигурни дека сакате трајно да отстраните %d избрани "
+#~ "предмети од ѓубрето?"
+
+#~ msgid ""
+#~ "The %d selected item will be moved if you select the Paste Files "
+#~ "commandThe %d selected items will be moved if you select the Paste Files "
+#~ "command"
+#~ msgstr ""
+#~ "%d избран предмет ќе биде преместен доколку ја изберете командата „Вметни "
+#~ "датотеки“%d избрани предмети ќе бидат преместени доколку ја изберете "
+#~ "командата „Вметни датотеки“"
+
+#~ msgid ""
+#~ "The %d selected item will be copied if you select the Paste Files "
+#~ "commandThe %d selected items will be copied if you select the Paste Files "
+#~ "command"
+#~ msgstr ""
+#~ " %d избран предмет ќе биде ископиран доколку ја изберете командата Вметни "
+#~ "датотека %d избрани предмети ќе бидат ископирани доколку ја изберете "
+#~ "командата Вметни датотеки"
+
 #~ msgid "Open with..."
 #~ msgstr "Отвори со..."
 
@@ -6605,8 +6688,11 @@ msgstr "Гледај ги твоите мрежни сервери во Наут
 #~ msgstr "Пробај да го собереш во прозорец"
 
 #~ msgid ""
-#~ "Are you sure you want to permanently delete the %d selected item? Are you sure you want to permanently delete the %d selected items?"
-#~ msgstr "Дали сакате трајно да отстраните %d означен предмет? Дали сте сигурни дека сакате траjно да отстраните %d избрани предмети?"
+#~ "Are you sure you want to permanently delete the %d selected item? Are you "
+#~ "sure you want to permanently delete the %d selected items?"
+#~ msgstr ""
+#~ "Дали сакате трајно да отстраните %d означен предмет? Дали сте сигурни "
+#~ "дека сакате траjно да отстраните %d избрани предмети?"
 
 #~ msgid "There was an error displaying help: %s"
 #~ msgstr "Се појави грешка при прикашување на помош %s."
