Post release version bump
2005-01-11  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== nautilus 2.9.2 ===

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-01-11  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.9.2 ===
+	
 2004-01-11  James Henstridge  <james@jamesh.id.au>
 
 	* test/Makefile.am: don't define GNOMELOCALEDIR in INCLUDES.
