Make window title "location - File Browser", not "File Browser: location".
2005-01-11  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-navigation-window.c (real_set_title):
	Make window title "location - File Browser", not "File Browser: location".
	Fixes #149008. Patch by Gustavo Carneiro.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-01-11  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-navigation-window.c (real_set_title):
+	Make window title "location - File Browser", not "File Browser: location".
+	Fixes #149008. Patch by Gustavo Carneiro.
+
+2005-01-11  Alexander Larsson  <alexl@redhat.com>
+
 	* configure.in:
 	Post release version bump
 
