--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-11  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 === nautilus 2.9.2 ===
 	
 2005-01-07  Kjartan Maraas  <kmaraas@gnome.org>
