--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-12  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-main.c (register_icons):
+	Remove debug spew
+
 2005-01-11  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-factory.c:
