--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-10  Raphael Higino  <raphaelh@cvs.gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation.
+
 2004-12-13  Dwayne Bailey  <dwayne@translate.org.za>
 
 	* zu.po: Added Zulu translation by
