--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2005-01-15  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* POTFILES.in: Add nautilus-connect-to-server-dialog-main.c
+	* nb.po: Update
+	* no.po: Update
+
 2005-01-15  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
