--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-15  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2005-01-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* POTFILES.in: Add nautilus-connect-to-server-dialog-main.c
