--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-15  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2005-01-15  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
