--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-16  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* src/file-manager/fm-icon-view.c: Applied patch from Tierry
+	Moisan that resolves trivial bug #159128.
+
 2005-01-14  Alexander Larsson  <alexl@redhat.com>
 
 	* Makefile.am:
