Updated German translation.

--- a/po/de.po
+++ b/po/de.po
@@ -33,7 +33,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 2.7.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-16 16:40+0100\n"
+"POT-Creation-Date: 2005-01-16 17:39+0100\n"
 "PO-Revision-Date: 2005-01-16 16:54+0100\n"
 "Last-Translator: Hendrik Richter <hendrik@gnome-de.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
@@ -4441,10 +4441,10 @@ msgstr "Nach Namen auf_räumen"
 
 #. label, accelerator
 #: src/file-manager/fm-icon-view.c:1402
-msgid "Reposition icons to better fit in the window and avoaction overlapping"
+msgid "Reposition icons to better fit in the window and avoid overlapping"
 msgstr ""
 "Die Symbole neu anordnen, damit sie besser ins Fenster passen und sich "
-"weniger überlappen"
+"nicht überlappen"
 
 #. name, stock id
 #: src/file-manager/fm-icon-view.c:1408
