--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-16  Hendrik Richter  <hendrik@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2005-01-16  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated.
