Don't use destroyed dialog. Patch from Vincent Untz <vincent@vuntz.net>.
2005-01-17  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-connect-server-dialog.c: (connect_to_server):
	Don't use destroyed dialog.
	Patch from Vincent Untz <vincent@vuntz.net>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-01-17  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-connect-server-dialog.c: (connect_to_server):
+	Don't use destroyed dialog.
+	Patch from Vincent Untz <vincent@vuntz.net>.
+
 2005-01-16  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* src/file-manager/fm-icon-view.c: Applied patch from Tierry
