Better default icon. Patch from Jaap Haitsma <jaap@haitsma.org>
2005-01-18  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-main.c: (main):
	* src/nautilus-window.c: (nautilus_window_class_init):
	Better default icon.
	Patch from Jaap Haitsma <jaap@haitsma.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-01-18  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-main.c: (main):
+	* src/nautilus-window.c: (nautilus_window_class_init):
+	Better default icon.
+	Patch from Jaap Haitsma <jaap@haitsma.org>
+
 2005-01-17  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-connect-server-dialog.c: (connect_to_server):
