--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2005-01-19  Alexander Larsson  <alexl@redhat.com>
+
+	* nautilus-home.desktop.in:
+	Fix icon
+	
+	* nautilus.desktop.in:
+	Put in menus.
+
+	Patch from Luca Ferretti <elle.uca@libero.it>
+
 2005-01-18  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-main.c: (main):
