--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-01-19  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-window-menus.c: (action_about_nautilus_callback):
+	Use GtkAboutDialog.
+
+	Patch from Luca Ferretti <elle.uca@libero.it>
+
+2005-01-19  Alexander Larsson  <alexl@redhat.com>
+
 	* nautilus-home.desktop.in:
 	Fix icon
 	
