--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2005-01-19  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* POTFILES.in: Add [endcoding: UTF-8]
+	* nb.po: Update
+	* no.po: Update
+
 2005-01-17  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
