--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-19  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2005-01-19  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* POTFILES.in: Add [endcoding: UTF-8]
