Add stock arrow icons to "Move Up/Down" buttons.
2005-01-20  Martin Wehner  <martin.wehner@epost.de>

	* libnautilus-private/nautilus-column-chooser.c:
	(button_new_with_mnemonic), (add_buttons):
	Add stock arrow icons to "Move Up/Down" buttons.

	Patch from Michael Gossard <michael.gossard@free.fr>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-01-20  Martin Wehner  <martin.wehner@epost.de>
+
+	* libnautilus-private/nautilus-column-chooser.c:
+	(button_new_with_mnemonic), (add_buttons):
+	Add stock arrow icons to "Move Up/Down" buttons.
+
+	Patch from Michael Gossard <michael.gossard@free.fr>
+
 2005-01-19  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-window-menus.c: (action_about_nautilus_callback):
