--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-20  Rhys Jones  <rhys@sucs.org>
+
+	* cy.po: Updated Welsh translation with new strings + many fixes.
+
 2005-01-19  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
