--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-20  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by
+	Vladimir Petkov <vpetkov@i-space.org>
+
 2005-01-20  Rhys Jones  <rhys@sucs.org>
 
 	* cy.po: Updated Welsh translation with new strings + many fixes.
