--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-01-20  Martin Wehner  <martin.wehner@epost.de>
 
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	Fix sidebar_width typo in gconf schema (#162204).
+
+	Patch from J. Christopher Six <j.christopher.six@gmail.com>
+
+2005-01-20  Martin Wehner  <martin.wehner@epost.de>
+
 	* libnautilus-private/nautilus-column-chooser.c:
 	(button_new_with_mnemonic), (add_buttons):
 	Add stock arrow icons to "Move Up/Down" buttons.
