Corrected further minor typos in Welsh translation.
2005-01-21  Rhys Jones  <rhys@sucs.org>

        * cy.po: Corrected further minor typos in Welsh translation.

--- a/po/cy.po
+++ b/po/cy.po
@@ -47,8 +47,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-20 07:59+0000\n"
-"PO-Revision-Date: 2005-01-20 07:54+0000\n"
+"POT-Creation-Date: 2005-01-21 07:38+0000\n"
+"PO-Revision-Date: 2005-01-21 07:41+0000\n"
 "Last-Translator: Rhys Jones <rhys@sucs.org>\n"
 "Language-Team: Cymraeg <gnome-cy@pengwyn.linux.org.uk>\n"
 "MIME-Version: 1.0\n"
@@ -2723,7 +2723,7 @@ msgstr "Yn Ôl Dyddiad Newid"
 #: libnautilus-private/nautilus-global-preferences.c:188
 #: src/nautilus-file-management-properties.glade.h:42
 msgid "By Emblems"
-msgstr "Yn Ôl Bathodynau"
+msgstr "Yn Ôl Bathodynnau"
 
 #: libnautilus-private/nautilus-global-preferences.c:193
 msgid "8"
@@ -3388,8 +3388,8 @@ msgstr "dewiswyd \"%s\""
 msgid "%d folder selected"
 msgid_plural "%d folders selected"
 msgstr[0] "dewiswyd %d plygell"
-msgstr[1] "dewiswyd %d blygell"
-msgstr[2] "dewiswyd %d plygell"
+msgstr[1] "dewiswyd %d plygell"
+msgstr[2] "dewiswyd %d blygell"
 msgstr[3] "dewiswyd %d plygell"
 
 #: src/file-manager/fm-directory-view.c:1805
@@ -3680,7 +3680,7 @@ msgid_plural ""
 msgstr[0] ""
 "Caiff y %d eitem dewisiedig eu symud os dewiswch y gorchymyn Gludo Ffeiliau"
 msgstr[1] ""
-"Caiff y %d eitem dewisiedig eu symud os dewiswch y gorchymyn Gludo Ffeiliau"
+"Caiff yr %d eitem dewisiedig ei symud os dewiswch y gorchymyn Gludo Ffeiliau"
 msgstr[2] ""
 "Caiff y %d eitem dewisiedig eu symud os dewiswch y gorchymyn Gludo Ffeiliau"
 msgstr[3] ""
@@ -3695,7 +3695,7 @@ msgid_plural ""
 msgstr[0] ""
 "Caiff yr eitem dewisiedig eu copïo os dewiswch y gorchymyn Gludo Ffeiliau"
 msgstr[1] ""
-"Caiff y %d eitem dewisiedig eu copïo os dewiswch y gorchymyn Gludo Ffeiliau"
+"Caiff yr %d eitem dewisiedig ei gopïo os dewiswch y gorchymyn Gludo Ffeiliau"
 msgstr[2] ""
 "Caiff y %d eitem dewisiedig eu copïo os dewiswch y gorchymyn Gludo Ffeiliau"
 msgstr[3] ""
@@ -4578,8 +4578,8 @@ msgstr "annarllenadwy"
 #, c-format
 msgid "%d item, with size %s"
 msgid_plural "%d items, totalling %s"
-msgstr[0] "%d eitem, o faint %s"
-msgstr[1] "%d eitem, o gyfanswm maint %s"
+msgstr[0] "%d eitem, o gyfanswm maint %s"
+msgstr[1] "%d eitem, o faint %s"
 msgstr[2] "%d eitem, o gyfanswm maint %s"
 msgstr[3] "%d eitem, o gyfanswm maint %s"
 
@@ -5868,7 +5868,7 @@ msgstr "Nodiadau"
 #. set the title and standard close accelerator
 #: src/nautilus-property-browser.c:270
 msgid "Backgrounds and Emblems"
-msgstr "Cefndiroedd a Bathodynau"
+msgstr "Cefndiroedd a Bathodynnau"
 
 #: src/nautilus-property-browser.c:379
 msgid "_Remove..."
