Add license to about dialog. Change copyright statement.
2005-01-21  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-window-menus.c: (action_about_nautilus_callback):
	Add license to about dialog.
	Change copyright statement.

	Patch from Luca Ferretti <elle.uca@libero.it>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-01-21  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-window-menus.c: (action_about_nautilus_callback):
+	Add license to about dialog.
+	Change copyright statement.
+
+	Patch from Luca Ferretti <elle.uca@libero.it>
+
 2005-01-20  Martin Wehner  <martin.wehner@epost.de>
 
 	* libnautilus-private/apps_nautilus_preferences.schemas.in:
