--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-21  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nn.po: Update this.
+
 2005-01-21  Rhys Jones  <rhys@sucs.org>
 
 	* cy.po: Corrected further minor typos in Welsh translation.
