--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-21  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* src/nautilus-window-menus.c: Correct License (It said Evince).
+
 2005-01-21  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-window-menus.c: (action_about_nautilus_callback):
