Updated Spanish translation
2005-01-21  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

       * es.po: Updated Spanish translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-21  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2005-01-21  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nn.po: Update this.
